<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PHRApp</string>
    <string name="phr_main_navigation_view_header_name">用户名</string>
    <string name="phr_main_navigation_view_header_note">备注</string>
    <string name="phr_main_navigation_view_menu_item1">收    藏</string>
    <string name="phr_main_navigation_view_menu_item2">消    息</string>
    <string name="phr_main_navigation_view_menu_item3">健康管理</string>
    <string name="phr_main_navigation_view_menu_item4">就诊记录</string>
    <string name="phr_main_navigation_view_menu_item5">个人信息</string>
    <string name="phr_main_navigation_view_menu_item6">退出登录</string>
    <string name="phr_main_gridlayout_text1">健康资讯</string>
    <string name="phr_main_gridlayout_text2">计划免疫</string>
    <string name="phr_main_gridlayout_text3">就医地图</string>
    <string name="phr_main_gridlayout_text4">自动挂号</string>
    <string name="phr_main_gridlayout_text5">社  区</string>
    <string name="phr_main_gridlayout_text6">药品信息</string>

    <!--login string-->
    <string name="phr_login_app_name">PHR健康社区</string>
    <string name="phr_login_register">注  册</string>
    <string name="phr_login_find">找回密码</string>
    <string name="phr_login_username">用户名</string>
    <string name="phr_login_password">密  码</string>
    <string name="phr_login_login">登 入</string>
    <!--register string-->
    <string name="phr_register_username_hint">请输入用户名</string>
    <string name="phr_register_phone_hint">请输入手机号</string>
    <string name="phr_register_password_hint">请输入密码</string>
    <string name="phr_register_repeat_password_hint">请重复密码</string>
    <string name="phr_register_submit">提  交</string>
    <string name="phr_register_man">男</string>
    <string name="phr_register_girl">女</string>
    <string name="phr_register_id_card">请输入身份证号</string>
    <string name="phr_register_email">请输入邮箱</string>

    <!--main string-->
    <string name="phr_main_logo_text">PHR个人健康管理</string>

    <!--search view-->
    <string name="phr_search_view_text">查找</string>
    <string name="phr_search_hint" tools:ignore="TypographyEllipsis">搜索一下...</string>
    <string name="phr_search_community">社区</string>
    <string name="phr_search_result">n条结果</string>
    <string name="phr_search_history">搜索历史</string>
    <string name="phr_search_clear">清空</string>
    <string name="phr_search_none">抱歉，未找到相关结果</string>
    <string name="phr_search_history_result">结果</string>
    <string name="phr_search_result_title">标题</string>
    <string name="phr_search_result_time">时间</string>
    <string name="phr_search_result_author">作者</string>
    <string name="phr_search_result_like">11</string>
    <string name="phr_search_result_comment">102</string>


    <!--message menu-->
    <string name="phr_message_menu_add">添加</string>
    <string name="phr_message_menu_delete">删除</string>
    <string name="phr_message_toolbar_title">健康咨询</string>

    <!--community string-->
    <string name="phr_community_name">用户名</string>
    <string name="phr_community_description">描述</string>
    <string name="phr_community_time">发布时间</string>
    <string name="phr_community_title">输入标题</string>
    <string name="phr_community_sub_title">输入正文</string>
    <string name="phr_community_text">3行正文</string>
    <string name="phr_community_count">1.3k</string>
    <string name="phr_community_goon">继续</string>
    <string name="phr_community_toolbar_title">社  区</string>
    <string name="phr_community_write">写文章</string>

    <!--treatment string-->
    <string name="phr_treatment_hosp_choice">选择医院</string>
    <string name="phr_treatment_dept_choice">选择科室</string>
    <string name="phr_treatment_doc_choice">医生列表</string>
    <string name="phr_treatment_doc_work_time">坐诊时间 :</string>
    <string name="phr_treatment_appointment">确认挂号单</string>
    <string name="phr_treatment_user_name">患者</string>
    <string name="phr_treatment_hosp_name">医院名</string>
    <string name="phr_treatment_dept_name">就诊科室</string>
    <string name="phr_treatment_doctor_name">预约医生</string>
    <string name="phr_treatment_appoint_time">预约时间</string>
    <string name="phr_treatment_doc_page">医生主页</string>
    <string name="phr_treatment_self_appointment">自助挂号</string>

    <!--write fragment string-->
    <string name="phr_write_positive">发布</string>
    <string name="phr_write_negative">取消</string>
    <string name="phr_write_error_title">出错啦~</string>
    <string name="phr_write_error_content">请先登入</string>
    <string name="phr_write_error_ok">确认</string>

    <!--boom menu string-->
    <string name="phr_boom_delete_text">删  除</string>
    <string name="phr_boom_share_text">分  享</string>
    <string name="phr_boom_complain_text">举  报</string>
    <string name="phr_boom_get_text">收  藏</string>
    <string name="phr_boom_transfer_text">转  发</string>

    <!--article string-->
    <string name="phr_article_fragment_toolbar_title">文  章</string>
    <string name="phr_article_fragment_title">标题</string>
    <string name="phr_article_fragment_body_text">正文</string>
    <string name="phr_rv_my_article_comment_reference">引用id楼 @user 发表的</string>
    <string name="phr_rv_my_article_comment_author">楼  主</string>
    <string name="phr_rv_my_article_comment_date">日  期</string>
    <string name="phr_rv_my_article_comment_like_count">喜欢(1)</string>
    <string name="phr_rv_my_article_comment_reply">回复</string>
    <string name="phr_rv_my_article_comment_show_reply">查看回复</string>
    <string name="phr_rv_my_article_comment_id">#1</string>
    <string name="phr_article_fragment_submit">发  布</string>
    <string name="phr_article_fragment_reply">写回复</string>
    <string name="phr_article_fragment_all_reply">全部回复</string>
    <string name="phr_rv_my_article_no_comment">暂无评论</string>
    <string name="phr_activity_show_reply_title">查看回复</string>
    <string name="phr_article_fragment_type">按时间</string>
    <string name="phr_article_menu_collect">收  藏</string>
    <string name="phr_article_menu_share">分  享</string>
    <string name="phr_article_menu_complaints">举  报</string>
    <string name="phr_article_menu_like">点  赞</string>
    <string name="phr_article_menu_dislike">点  灭</string>
    <string name="phr_article_menu_more">更  多</string>

    <!--sort string-->
    <string name="phr_article_sort_title">请选择排序方式</string>
    <string name="phr_article_sort_item1">按时间</string>
    <string name="phr_article_sort_item2">按赞数</string>
    <string name="phr_article_sort_item3">按新鲜</string>
    <string name="phr_article_sort_item4">看楼主</string>
    <string name="phr_article_sort_item5">取消</string>


    <!--bottom dialog string-->
    <string name="phr_bottom_dialog_exit">退  出</string>
    <string name="phr_bottom_dialog_warn">举  报</string>
    <string name="phr_bottom_dialog_dislike">点  灭</string>

    <!--share string-->
    <string name="phr_share_string" tools:ignore="TypographyEllipsis">分享到...</string>
    <string name="phr_share_dialog_weibo">微  博</string>
    <string name="phr_share_dialog_wechat">微  信</string>
    <string name="phr_share_dialog_qq">QQ</string>
    <string name="phr_share_dialog_cancel">取  消</string>

    <!--collect string-->
    <string name="phr_collect_my_collect">我的收藏</string>




    <string name="phr_community_text_test">静夜思\n
[唐] 李白\n
床前明月光，疑是地上霜。\n
举头望明月，低头思故乡。</string>
    <string name="comment">静夜思\n
[唐] 李白\n
床前明月光，疑是地上霜。\n
举头望明月，低头思故乡。</string>


    <string name="my_text">北京时间7月31日消息，36岁的老将德维恩-韦德今夏成为了自由球员，迈阿密热火队率先表达了对其留下的渴望，并表示他们愿意耐心等待韦德最终做出决定，不过热火现在仍没有透露具体的报价。今日，韦德在接受采访时表示，他会做出对自己家庭最好的决定。

“到时候就知道了。”韦德在接受采访时说道，“时间会告诉答案。”

“我的还在正在读高中三年级，”韦德继续说道，“现在这个时候，我已经36岁了，尤其是进入职业生涯的这个时候，很多决定都是要围绕家庭来做决定，我要做对最好的决定。所以我会确保我的儿子们得到能够让他们在比赛，或是在生活中取得成功的任何工具。”

值得一提的是，热火队总裁帕特-莱利在此前接受采访时表示，他将与球队经理米奇-阿里森商谈韦德的未来问题，不过，热火目前只能给韦德提供两份合同：530万的中产特例，240万的老将底薪。莱利表示，在今年夏天，热火已经与韦德及其经纪人莱昂-罗斯有过交流，但显然结果并不是很理想，双方都没有透露任何谈话细节。值得一提的是，有媒体爆料CBA的浙江稠州银行男篮已经为韦德提供了一份3年2500万美元的合同。

在上赛季即将结束时，韦德已经多次表示自己并不确定是否会继续在NBA征战自己的第16个赛季，之后他也没有对这种表述做过任何修改。最近几周，韦德仍然坚持做训练，包括和勒布朗-詹姆斯在拉斯维加斯看夏季联赛，但这并不能说明他是否会继续打球。

过去的一个赛季，韦德先是在骑士队效力，赛季中期的时候，他被交易到了热火。过去一个赛季，韦德替补出场，场均可以得到12分3.4个篮板和3.1次助攻。</string>
    <string name="phr_treatment_appoint_success">预约成功</string>
    <string name="phr_back__to_main_page">返回首页</string>
    <string name="phr_treatment_record">就诊记录</string>


</resources>
