<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/phr_margin_4"
    android:background="@drawable/phr_bottom_dialog_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phr_dialog_title_bg"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/phr_padding_2"
        android:text="@string/phr_article_sort_title"
        android:textColor="@color/color_text_hint"
        android:textSize="@dimen/phr_text_size_14"
        android:id="@+id/phr_article_sort_title"
        tools:ignore="KeyboardInaccessibleWidget" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phr_bottom_dialog_item_collect_bg"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/phr_padding_8"
        android:text="@string/phr_article_sort_item1"
        android:textColor="@color/color_text_sub_title"
        android:textSize="@dimen/phr_text_size_14"
        android:id="@+id/phr_article_sort_item1"
        tools:ignore="KeyboardInaccessibleWidget" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phr_bottom_dialog_item_collect_bg"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/phr_padding_8"
        android:text="@string/phr_article_sort_item2"
        android:textColor="@color/color_text_sub_title"
        android:textSize="@dimen/phr_text_size_14"
        android:id="@+id/phr_article_sort_item2"
        tools:ignore="KeyboardInaccessibleWidget"
        android:layout_marginTop="@dimen/phr_divide_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phr_bottom_dialog_item_collect_bg"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/phr_padding_8"
        android:text="@string/phr_article_sort_item3"
        android:textColor="@color/color_text_sub_title"
        android:textSize="@dimen/phr_text_size_14"
        android:id="@+id/phr_article_sort_item3"
        tools:ignore="KeyboardInaccessibleWidget"
        android:layout_marginTop="@dimen/phr_divide_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phr_bottom_dialog_item_collect_bg"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/phr_padding_8"
        android:text="@string/phr_article_sort_item4"
        android:textColor="@color/color_text_sub_title"
        android:textSize="@dimen/phr_text_size_14"
        android:id="@+id/phr_article_sort_item4"
        tools:ignore="KeyboardInaccessibleWidget"
        android:layout_marginTop="@dimen/phr_divide_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phr_bottom_dialog_item_exit_bg"
        android:clickable="true"
        android:layout_marginTop="@dimen/phr_margin_5"
        android:gravity="center"
        android:padding="@dimen/phr_padding_8"
        android:text="@string/phr_article_sort_item5"
        android:textColor="@color/color_text_sub_title"
        android:textSize="@dimen/phr_text_size_14"
        android:id="@+id/phr_article_sort_item5"
        tools:ignore="KeyboardInaccessibleWidget" />
</LinearLayout>