<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/phr_article_fragment_container">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/phr_white"
        app:navigationIcon="@drawable/phr_arrow_back_black_24"
        android:id="@+id/phr_article_fragment_toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_title"
            tools:text="@string/phr_article_fragment_toolbar_title"
            android:text="@string/phr_article_fragment_toolbar_title"
            android:layout_gravity="center"
            android:textSize="@dimen/phr_text_size_20"
            android:id="@+id/phr_article_fragment_toolbar_title"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/phr_article_fragment_toolbar"
        android:id="@+id/phr_article_fragment_scroll_view"
        android:layout_above="@+id/reply_container"
        android:background="@color/phr_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/phr_padding_5"
            android:paddingRight="@dimen/phr_padding_5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phr_article_fragment_title"
                tools:text="@string/phr_article_fragment_title"
                android:textColor="@color/color_text_title"
                android:textSize="@dimen/phr_text_size_18"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/phr_margin_2"
                android:lineSpacingExtra="@dimen/phr_padding_2" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/phr_width_25"
                android:layout_marginTop="@dimen/phr_margin_5">
                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/phr_width_20"
                    android:layout_height="@dimen/phr_width_20"
                    tools:src="@mipmap/phr_logo_fl"
                    android:scaleType="centerCrop"
                    android:layout_centerVertical="true"
                    android:id="@+id/phr_article_fragment_icon"
                    app:riv_oval="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/phr_margin_2"
                    android:layout_marginRight="@dimen/phr_margin_2"
                    android:paddingTop="@dimen/phr_padding_1"
                    android:paddingBottom="@dimen/phr_padding_1"
                    android:layout_toRightOf="@+id/phr_article_fragment_icon"
                    android:layout_toEndOf="@+id/phr_article_fragment_icon">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:text="@string/phr_community_name"
                        android:textColor="@color/color_text_title"
                        android:padding="@dimen/phr_padding_1"
                        android:textSize="@dimen/phr_text_size_12"
                        android:id="@+id/phr_article_fragment_name"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:text="@string/phr_community_description"
                        android:textColor="@color/color_text_hint"
                        android:padding="@dimen/phr_padding_2"
                        android:textSize="@dimen/phr_text_size_10"
                        android:id="@+id/phr_article_fragment_describe"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phr_article_fragment_date"
                    android:textColor="@color/color_text_hint"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    tools:text="@string/phr_community_time"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/phr_text_size_12"
                    android:padding="@dimen/phr_padding_2"/>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phr_article_fragment_body_text"
                tools:text="@string/my_text"
                android:textSize="@dimen/phr_text_size_13"
                android:lineSpacingExtra="@dimen/phr_padding_2"
                android:textColor="@color/color_text_sub_title"
                android:layout_marginTop="@dimen/phr_margin_5"
                android:layout_marginBottom="@dimen/phr_margin_2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/phr_margin_3"
                android:layout_marginBottom="@dimen/phr_margin_5"
                android:background="@drawable/phr_reply_text_board_bg">
                <View
                    android:layout_width="@dimen/phr_width_5"
                    android:layout_height="match_parent"
                    android:background="@drawable/phr_shape_gradient_line"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/phr_text_size_14"
                    android:text="@string/phr_article_fragment_all_reply"
                    android:textColor="@color/color_boom_purple_highlight_color"
                    android:layout_marginLeft="@dimen/phr_margin_3"
                    android:layout_marginStart="@dimen/phr_margin_3" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phr_article_fragment_comment"
                android:layout_marginBottom="@dimen/phr_margin_2"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/phr_white"
        android:id="@+id/reply_container">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:id="@+id/phr_article_fragment_edit"
            android:background="@drawable/phr_my_article_edit_bg"
            android:textColor="@color/color_text_sub_title"
            android:textColorHint="@color/color_text_hint"
            android:hint="@string/phr_article_fragment_reply"
            android:padding="@dimen/phr_padding_4"
            android:textSize="@dimen/phr_text_size_14"
            android:drawableLeft="@drawable/ic_write_black_24dp"
            android:drawableStart="@drawable/ic_write_black_24dp"
            android:layout_toLeftOf="@+id/phr_article_fragment_submit"
            android:layout_toStartOf="@+id/phr_article_fragment_submit"
            android:layout_centerVertical="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/phr_article_fragment_submit"
            android:text="@string/phr_article_fragment_submit"
            android:layout_centerVertical="true"
            android:background="@drawable/phr_article_reply_button_bg"
            android:clickable="false"
            android:textColor="@color/color_text_title"
            android:textColorHint="@color/color_text_hint" />
    </RelativeLayout>


</RelativeLayout>